# filtrare-file-txt

./: .dockerignore  .env_example  .gitignore  README.md  pyproject.toml
app/: main.py
directory_file_txt/: AI challenges the dominance of Google search.txt  AWS outage Are we relying too much on US big tech.txt  Amazon apologises to customers impacted by huge AWS outage.txt  Amazon confirms 14000 job losses in corporate division.txt  Amazon outage resolved as Snapchat and banks among sites impacted.txt  Amazon unveils prototype AI smart glasses for its delivery drivers.txt  Apple may be forced to allow rival app stores in UK.txt  Armed police handcuff teen after AI mistakes crisp packet for gun in US.txt  Artificial food colours are out so whats next.txt  Bereaved families call for inquiry into government response to suicide websites.txt  Can the plastic recycling industry be saved.txt  Characterai to ban teens from talking to its AI chatbots.txt  ChatGPT shares data on how many users exhibit psychosis or suicidal thoughts.txt  ChatGPTs new browser has potential if youre willing to pay.txt  Computer science graduates struggle to secure their first jobs.txt  Could aluminium become the packaging champion.txt  Economic woes dominate as Bolivia prepares to go to the polls.txt  First UK phones to get satellite connectivity in signal blackspots announced.txt  Food firms scramble to meet the high-protein craze.txt  How good is the battery in a used electric vehicle.txt  How to destroy harmful forever chemicals.txt  How to get AI to work in 22 languages.txt  Tech Life.txt  (+741 more)
(+5 files in other folders)
